<resources>
    <string name="app_name">Score Keeper</string>
    <string name="team_a">Team A</string>
    <string name="team_b">Team B</string>
    <string name="font_family_entity_name">sans-serif-medium</string>
    <string name="font_family_quantity">sans-serif-light</string>
    <string name="score_initial_value">0</string>
    <string name="goal">Goal</string>
    <string name="foul">foul</string>
    <string name="yellow_card">Yellow Card</string>
    <string name="red_card">Red Card</string>
    <string name="reset_button">Reset</string>
    <string name="fouls">Fouls</string>
    <string name="yellows">Yellows</string>
    <string name="reds">Reds</string>
</resources>
